// Copyright 2023-present The Sekas Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package sekas.server.v1;

// The structure to hold an user key.
message ShardKey {
    // The shard id.
    uint64 shard_id = 1;
    // The key in this shard.
    bytes user_key = 2;
}

// The smallest unit of user data.
message Value {
    // The content of user data. `None` for delete tombstone.
    optional bytes content = 1;
    // The version of user data.
    uint64 version = 2;
}

// A set of values belong to a same key, with different versions.
message ValueSet {
    // The user key which values belongs to.
    bytes user_key = 1;
    // The values, it should sorted in desc order by version.
    repeated Value values = 2;
}
